globus-gss-assist (10.5-1+gt6.@distro@) @distro@; urgency=low

  * Eliminate script initializer use

 -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 13:29:30 -0500

globus-gss-assist (10.4-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 12:41:14 -0500

globus-gss-assist (10.3-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 11:56:47 -0500

globus-gss-assist (10.2-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 11:45:50 -0500

globus-gss-assist (10.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix test credential file permssions

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 09:29:16 -0500

globus-gss-assist (10.0-2+gt6.@distro@) @distro@; urgency=low

  * Update dependencies

 -- Globus Toolkit <support@globus.org>  Tue, 28 Jan 2014 17:16:03 -0500

globus-gss-assist (10.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 11:21:58 -0500

globus-gss-assist (9.0-2) unstable; urgency=low

  * Fix dependency

 -- Globus Toolkit <support@globus.org>  Mon, 28 October 2013 16:02:46 -0400

globus-gss-assist (9.0-1) unstable; urgency=low

  * Update Major version for globus_gss_assist_map_and_authorize_sharing

 -- Globus Toolkit <support@globus.org>  Mon, 28 Oct 2013 13:25:13 -0400

globus-gss-assist (8.9-1) unstable; urgency=low

  * Update sharing to support a full cert chain at logon

 -- Globus Toolkit <support@globus.org>  Tue, 19 Mar 2013 14:54:01 -0500

globus-gss-assist (8.8-1) unstable; urgency=low

  * GT-365: Switch sharing user identification from DN to CERT

 -- Globus Toolkit <support@globus.org>  Tue, 05 Mar 2013 17:09:04 -0500

globus-gss-assist (8.7-1) unstable; urgency=low

  * GT-302: Add initial sharing support to the GridFTP server